--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,6 +1,7 @@
 {% extends 'blogger/base.html' %}
 {% block content %}
 <div class="alert alert-info">
-    An email has been sent with instructions to reset your password
+    Your Password has been set
 </div>
+<a href="{% url 'login' %}">Sign In Here</a>
 {% endblock content %}
