--- a/blogger/templates/blogger/post_form.html
+++ b/blogger/templates/blogger/post_form.html
@@ -2,11 +2,12 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="content-section">
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Bloger Post</legend>
+            <legend class="border-bottom mb-4">New Post</legend>
             {{ form|crispy }}
+            {{ form.media }}
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Post</button>
