--- a/blogger/templates/blogger/post_detail.html
+++ b/blogger/templates/blogger/post_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 <article class="media content-section">
     <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
-    <div class="media-body">
+    <div class="media-body local-body">
         <div class="article-metadata">
             <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
             <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
