--- a/blogger/templates/blogger/user_posts.html
+++ b/blogger/templates/blogger/user_posts.html
@@ -4,7 +4,7 @@
 {% for post in posts %}
 <article class="media content-section">
     <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
-    <div class="media-body">
+    <div class="media-body local-body">
         <div class="article-metadata">
             <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
             <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
