--- a/blogger/templates/blogger/base.html
+++ b/blogger/templates/blogger/base.html
@@ -63,9 +63,9 @@
                 {% endif %}
                 {% block content %}{% endblock %}
             </div>
-            <!-- <div class="col-md-4">
+            <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Our Sidebar</h3>
+                    <!-- <h3>Our Sidebar</h3>
                     <p class='text-muted'>You can put any information here you'd like.
                     <ul class="list-group">
                         <li class="list-group-item list-group-item-light">Latest Posts</li>
@@ -73,9 +73,9 @@
                         <li class="list-group-item list-group-item-light">Calendars</li>
                         <li class="list-group-item list-group-item-light">etc</li>
                     </ul>
-                    </p>
+                    </p> -->
                 </div>
-            </div> -->
+            </div>
         </div>
     </main>
 
